cluster/apps/notea/notea/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: notea
  namespace: notea
  annotations:
    keel.sh/policy: minor
    keel.sh/approvals: "1"
    keel.sh/trigger: poll
    keel.sh/pollSchedule: '@every 1h'
spec:
  replicas: 1
  selector:
    matchLabels:
      app: notea
  template:
    metadata:
      labels:
        app: notea
    spec:
      containers:
        - name: notea
          image: cinwell/notea:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 100m
              memory: 128Mi
