cluster/apps/notea/notea/service.yaml
kind: Service
apiVersion: v1
metadata:
  name: notea
  namespace: notea
spec:
  type: NodePort
  selector:
    app: notea
  ports:
    - port: 80
      targetPort: 3000
      name: ui-port
