cluster/apps/notea/notea/ingress.sops.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: notea
    namespace: notea
    annotations:
        cert-manager.io/cluster-issuer: letsencrypt-production
        traefik.ingress.kubernetes.io/router.entrypoints: websecure
    labels:
        app.kubernetes.io/instance: notea
        app.kubernetes.io/name: notea
spec:
    ingressClassName: traefik
    rules:
        - host: ENC[AES256_GCM,data:0oIgn4Q9qcuA3CoMcu1pY981+vQXD++igxmZwA==,iv:1KGLfDVbPG+FUhAEk8FQCKne6pXF0UKQprHIIOr+Sfk=,tag:jhaDKofVRVxkULp0Ejrh7g==,type:str]
          http:
            paths:
                - pathType: Prefix
                  path: /
                  backend:
                    service:
                        name: notea
                        port:
                            number: 80
    tls:
        - hosts:
            - ENC[AES256_GCM,data:YiuvD8NM203/NPIWx1VjWc7sf/NELmHAkoTbkw==,iv:DuVFdz96ptse7v6QKFucjSDyyJg5h7e8MLuX32v3qLw=,tag:MezKL/IsIwpHNzWnxV63aA==,type:str]
          secretName: notea-app-tls
sops:
    kms: []
    gcp_kms: []
    azure_kv: []
    hc_vault: []
    age: []
    lastmodified: "2021-10-31T13:54:15Z"
    mac: ENC[AES256_GCM,data:+DMlVTGPcDvbTblcYpT5dkiIMzCco8B1qG+TWUp30eVAlgwR7rbi9pYXsUnz3DSli4iMwRk4bStSItoPb3J+ovt0AkGcsEXO8zlbXkNDA0QuqIm7Qr52i0wEJgjDPK7ywm9pe6b8hSlAX9LEIZVHn8st/uEKRis+OG0qfbGZ3zo=,iv:rixAj3uB8hA/RwR3UyTz4GqRjagi4OqN/E/bG757rds=,tag:YIOKbPQkUgfDa3Ti7ljACA==,type:str]
    pgp:
        - created_at: "2021-10-31T13:54:14Z"
          enc: |
            -----BEGIN PGP MESSAGE-----

            hQIMA80P3erPiRpkAQ//d2SReKqZ7PMJmxZWOzgu22NiXTAr9bCAJKqa5xAnryqz
[...]
            =fECu
            -----END PGP MESSAGE-----
          fp: F92C1A4A2B35F826A1E364EFF5A1747BE18D04FC
    encrypted_regex: ^(helm|data|stringData|networkPath|hosts?|loadBalancerIP|image)$
    version: 3.7.1
